@@ -1,4 +1,4 @@
-/* otp.l: Lexical analysis for OTP files
+/* otp-lexer.l: Lexical analysis for OTP files
 
 This file is part of Omega,
 which is based on the web2c distribution of TeX,
@@ -22,6 +22,8 @@ along with Omega; if not, write to the Free Software Foundation, Inc.,
 59 Temple Place, Suite 330, Boston, MA 02111-1307, USA.
 
 */
+
+%option never-interactive
 
 %{
 #include "routines.h"
